--- a/codegen/gql_build/pubspec.yaml
+++ b/codegen/gql_build/pubspec.yaml
@@ -3,13 +3,13 @@ version: 0.4.1
 description: Useful builders for your GraphQL SDL and documents. Based on package:gql_code_builder and package:build
 repository: https://github.com/gql-dart/gql
 environment: 
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 dependencies: 
-  analyzer: ^2.3.0
+  analyzer: '>=4.3.0'
   build: ^2.1.0
   built_collection: ^5.0.0
-  built_value: ^8.0.6
-  built_value_generator: ^8.0.6
+  built_value: ^8.4.0
+  built_value_generator: ^8.4.0
   code_builder: ^4.0.0
   dart_style: ^2.0.0
   glob: ^2.0.0
@@ -19,4 +19,4 @@ dependencies:
   yaml: ^3.1.0
 dev_dependencies: 
   build_test: ^2.0.0
-  gql_pedantic: ^1.0.2
+  gql_pedantic: ^2.0.0
