--- a/examples/gql_example_cli_github/pubspec.yaml
+++ b/examples/gql_example_cli_github/pubspec.yaml
@@ -1,13 +1,14 @@
 name: gql_example_cli_github
 environment: 
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 dependencies: 
   args: ^2.0.0
   gql: ^0.13.0
   gql_exec: ^0.4.0
   gql_http_link: ^0.4.0
   gql_transform_link: ^0.2.0
+  gql_link: ^0.4.2
 dev_dependencies: 
-  build_runner: ^2.0.0
+  build_runner: ^2.2.0
   gql_build: ^0.4.0
-  gql_pedantic: ^1.0.2
+  gql_pedantic: ^2.0.0
