--- a/links/gql_dio_link/pubspec.yaml
+++ b/links/gql_dio_link/pubspec.yaml
@@ -3,7 +3,7 @@ version: 0.2.2
 description: Similar to gql_http_link, gql_dio_link is a GQL Terminating Link to execute requests via Dio using JSON
 repository: https://github.com/gql-dart/gql
 environment: 
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 dependencies: 
   dio: ^4.0.0
   gql_exec: ^0.4.0
@@ -13,6 +13,7 @@ dev_dependencies:
   build_runner: ^2.0.0
   collection: ^1.15.0
   gql: ^0.13.0
-  gql_pedantic: ^1.0.2
+  gql_pedantic: ^2.0.0
   mockito: ^5.0.0
   test: ^1.14.3
+  http_parser:
